// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has the correct methods 1`] = `
Object {
  "clear": [Function],
  "get": [Function],
  "set": [Function],
  "supportsLocalStorage": [Function],
}
`;

exports[`localStorage works clears completely on clear() 1`] = `undefined`;

exports[`memory-only store has the correct methods 1`] = `
Object {
  "clear": [Function],
  "get": [Function],
  "set": [Function],
}
`;

exports[`will error without namespace 1`] = `"The namespace should be a string, received \\"undefined\\""`;

exports[`will error without namespace 2`] = `"The namespace should be a string, received \\"\\""`;

exports[`will error without namespace 3`] = `"The namespace should be a string, received \\"5\\""`;
